<resources>
    <string name="app_name">BookStore</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="logo_content_description">App logo</string>
    <string name="see_instructions">See instructions</string>
    <string name="welcome_to_app">Welcome to the BookStore app!</string>
    <string name="start_onboarding">Click on "see instructions" and start onboarding!</string>
    <string name="display_list_of_all_books">Click on the "display book list" button to display all the books.</string>
    <string name="click_on_book_details">Click on the book to display the details of the book.</string>
    <string name="click_on_the_button_to_add_a_book">In order to add a new book, click on the "+" button on the bottom right.</string>
    <string name="display_book_list">Display book list</string>
    <string name="add_book_fab">Add a new book</string>
    <string name="instructions">Instructions</string>
    <string name="book_list">Book List</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="book_details">Book Details</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="name">Name:</string>
    <string name="author">Author:</string>
    <string name="publisher">Publisher:</string>
    <string name="page_number">Page number:</string>
    <string name="genre">Genre:</string>
    <string name="all_fields_required">All fields are required</string>
</resources>