<?xml version="1.0" encoding="utf-8"?>
<layout>

    <!-- using LinearLayout because of the simplicity of the layout -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_margin"
        android:paddingTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/default_margin"
        tools:context=".screens.instructions.InstructionsFragment">

        <ImageView
            android:id="@+id/logo_instructions_screen"
            style="@style/LogoStyle"
            android:contentDescription="@string/logo_content_description" />

        <TextView
            android:id="@+id/instruction_text_view_1"
            style="@style/CenteredTextStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/display_list_of_all_books"
            android:textColor="@color/colorPrimaryDark" />

        <TextView
            android:id="@+id/instruction_text_view_2"
            style="@style/CenteredTextStyle"
            android:layout_gravity="center_horizontal"
            android:text="@string/click_on_book_details" />

        <TextView
            android:id="@+id/instruction_text_view_3"
            style="@style/CenteredTextStyle"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:text="@string/click_on_the_button_to_add_a_book" />

        <Button
            android:id="@+id/display_book_list_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/display_book_list" />

    </LinearLayout>
</layout>