<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!-- using LinearLayout because of the simplicity of the layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/default_margin"
        android:paddingTop="?attr/actionBarSize"
        android:paddingBottom="@dimen/default_margin"
        tools:context=".screens.welcome.WelcomeFragment">

        <ImageView
            android:id="@+id/logo_welcome_screen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"
            android:contentDescription="@string/logo_content_description"
            android:src="@mipmap/ic_launcher" />

        <TextView
            style="@style/CenteredTextStyle"
            android:id="@+id/welcome_text_view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryDark"
            android:layout_gravity="center"
            android:text="@string/welcome_to_app" />

        <TextView
            style="@style/CenteredTextStyle"
            android:id="@+id/welcome_text_view_2"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/start_onboarding" />

        <Button
            android:id="@+id/see_instructions_button"
            style="@style/WideButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/see_instructions" />
    </LinearLayout>
</layout>